--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
 
           <a id="ring-voly" class="ring-item" style="--i:0" href="#" target="_blank" rel="noopener noreferrer">💳 Voly</a>
           <a id="ring-sms" class="ring-item" style="--i:1" href="#" target="_blank" rel="noopener noreferrer">🧭 SMS</a>
-          <a id="ring-pinpoint" class="ring-item" style="--i:2" href="#" target="_blank" rel="noopener noreferrer">📍 Pinpoint</a>
-          <a id="ring-ptw" class="ring-item" style="--i:3" href="#" target="_blank" rel="noopener noreferrer">🛠️ Permit to Work</a>
-          <a id="ring-procedures" class="ring-item" style="--i:4" href="#" target="_blank" rel="noopener noreferrer">📘 Procedures</a>
-          <a id="ring-manuals" class="ring-item" style="--i:5" href="#" target="_blank" rel="noopener noreferrer">📚 Manuals</a>
-          <a id="ring-contacts" class="ring-item" style="--i:6" href="#" target="_blank" rel="noopener noreferrer">📇 Key Contacts</a>
-          <a id="ring-personnel" class="ring-item" style="--i:7" href="#" target="_blank" rel="noopener noreferrer">👥 Personnel</a>
-          <a id="ring-rotations" class="ring-item" style="--i:8" href="#" target="_blank" rel="noopener noreferrer">📅 Rotations</a>
-          <a id="ring-suggestion" class="ring-item" style="--i:9" href="#" target="_blank" rel="noopener noreferrer">💡 Suggestion Box</a>
+          <a id="ring-idea" class="ring-item" style="--i:2" href="#" target="_blank" rel="noopener noreferrer">💡 IDEA</a>
+          <a id="ring-pinpoint" class="ring-item" style="--i:3" href="#" target="_blank" rel="noopener noreferrer">📍 Pinpoint</a>
+          <a id="ring-ptw" class="ring-item" style="--i:4" href="#" target="_blank" rel="noopener noreferrer">🛠️ Permit to Work</a>
+          <a id="ring-procedures" class="ring-item" style="--i:5" href="#" target="_blank" rel="noopener noreferrer">📘 Procedures</a>
+          <a id="ring-manuals" class="ring-item" style="--i:6" href="#" target="_blank" rel="noopener noreferrer">📚 Manuals</a>
+          <a id="ring-contacts" class="ring-item" style="--i:7" href="#" target="_blank" rel="noopener noreferrer">📇 Key Contacts</a>
+          <a id="ring-personnel" class="ring-item" style="--i:8" href="#" target="_blank" rel="noopener noreferrer">👥 Personnel</a>
+          <a id="ring-rotations" class="ring-item" style="--i:9" href="#" target="_blank" rel="noopener noreferrer">📅 Rotations</a>
+          <a id="ring-suggestion" class="ring-item" style="--i:10" href="#" target="_blank" rel="noopener noreferrer">💡 Suggestion Box</a>
         </div>
         <p class="ring-hint">Tip: On mobile, links appear below as cards.</p>
       </section>
@@ -64,6 +65,12 @@
             <span class="card-icon" aria-hidden="true">🧭</span>
             <span class="card-title">SMS</span>
             <span class="card-desc">Safety Management System</span>
+          </a>
+
+          <a id="link-idea" class="card" href="#" target="_blank" rel="noopener noreferrer">
+            <span class="card-icon" aria-hidden="true">💡</span>
+            <span class="card-title">IDEA</span>
+            <span class="card-desc">Integrated Data & Engineering Analysis</span>
           </a>
 
           <a id="link-pinpoint" class="card" href="#" target="_blank" rel="noopener noreferrer">
