Add Second Engineer to crew assignment options
- Added 'Second Engineer' to the assigned person dropdown in Daily Work List
- Positioned logically after Chief Engineer in the crew hierarchy
- Maintains proper yacht crew structure for job assignments

--- a/pages/daily-work-list.html
+++ b/pages/daily-work-list.html
@@ -381,6 +381,7 @@
                 <option value="">Select person</option>
                 <option value="Captain">Captain</option>
                 <option value="Chief Engineer">Chief Engineer</option>
+                <option value="Second Engineer">Second Engineer</option>
                 <option value="First Officer">First Officer</option>
                 <option value="Bosun">Bosun</option>
                 <option value="Deckhand">Deckhand</option>
