Add comprehensive Shopping List page with cloud sync
- Created full-featured shopping list page for yacht provisioning
- Features: Add items, set quantities, categories, priorities
- Categories: Food & Beverages, Cleaning, Maintenance, Safety, Personal, Other
- Priority levels: High, Medium, Low with color coding
- Purchase tracking: Check off items as purchased
- Smart sorting: Unpurchased first, then by priority, then alphabetically
- Real-time statistics: Total items, purchased, remaining
- Cloud sync functionality for sharing across all devices
- Visual sync status indicators and manual sync controls
- Responsive design optimized for mobile and desktop
- Added Shopping List button to main MJII Operations Hub
- Updated ring layout to accommodate 14 items
- Perfect for yacht provisioning and supply management

--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
           <a id="ring-pinpoint" class="ring-item" style="--i:3" href="#" target="_blank" rel="noopener noreferrer">📍 Pinpoint</a>
           <a id="ring-erlog" class="ring-item" style="--i:4" href="#" target="_blank" rel="noopener noreferrer">⚙️ ER Log</a>
           <a id="ring-worklist" class="ring-item" style="--i:5" href="#" target="_blank" rel="noopener noreferrer">📋 Daily Work List</a>
-          <a id="ring-ptw" class="ring-item" style="--i:6" href="#" target="_blank" rel="noopener noreferrer">🛠️ Permit to Work</a>
-          <a id="ring-procedures" class="ring-item" style="--i:7" href="#" target="_blank" rel="noopener noreferrer">📘 Procedures</a>
-          <a id="ring-manuals" class="ring-item" style="--i:8" href="#" target="_blank" rel="noopener noreferrer">📚 Manuals</a>
-          <a id="ring-contacts" class="ring-item" style="--i:9" href="#" target="_blank" rel="noopener noreferrer">📇 Key Contacts</a>
-          <a id="ring-personnel" class="ring-item" style="--i:10" href="#" target="_blank" rel="noopener noreferrer">👥 Personnel</a>
-          <a id="ring-rotations" class="ring-item" style="--i:11" href="#" target="_blank" rel="noopener noreferrer">📅 Rotations</a>
-          <a id="ring-suggestion" class="ring-item" style="--i:12" href="#" target="_blank" rel="noopener noreferrer">💡 Suggestion Box</a>
+          <a id="ring-shopping" class="ring-item" style="--i:6" href="#" target="_blank" rel="noopener noreferrer">🛒 Shopping List</a>
+          <a id="ring-ptw" class="ring-item" style="--i:7" href="#" target="_blank" rel="noopener noreferrer">🛠️ Permit to Work</a>
+          <a id="ring-procedures" class="ring-item" style="--i:8" href="#" target="_blank" rel="noopener noreferrer">📘 Procedures</a>
+          <a id="ring-manuals" class="ring-item" style="--i:9" href="#" target="_blank" rel="noopener noreferrer">📚 Manuals</a>
+          <a id="ring-contacts" class="ring-item" style="--i:10" href="#" target="_blank" rel="noopener noreferrer">📇 Key Contacts</a>
+          <a id="ring-personnel" class="ring-item" style="--i:11" href="#" target="_blank" rel="noopener noreferrer">👥 Personnel</a>
+          <a id="ring-rotations" class="ring-item" style="--i:12" href="#" target="_blank" rel="noopener noreferrer">📅 Rotations</a>
+          <a id="ring-suggestion" class="ring-item" style="--i:13" href="#" target="_blank" rel="noopener noreferrer">💡 Suggestion Box</a>
         </div>
         <p class="ring-hint">Tip: On mobile, links appear below as cards.</p>
       </section>
@@ -91,6 +92,12 @@
             <span class="card-icon" aria-hidden="true">📋</span>
             <span class="card-title">Daily Work List</span>
             <span class="card-desc">Daily jobs and crew assignments</span>
+          </a>
+
+          <a id="link-shopping" class="card" href="#" target="_blank" rel="noopener noreferrer">
+            <span class="card-icon" aria-hidden="true">🛒</span>
+            <span class="card-title">Shopping List</span>
+            <span class="card-desc">Provisioning and supply management</span>
           </a>
 
           <a id="link-ptw" class="card" href="#" target="_blank" rel="noopener noreferrer">
