--- a/pages/daily-work-list.html
+++ b/pages/daily-work-list.html
@@ -656,11 +656,36 @@
         }
       }
 
-      function deleteJob(jobId) {
+      async function deleteJob(jobId) {
         if (confirm('Are you sure you want to delete this job?')) {
+          // Remove from local array
           jobs = jobs.filter(j => j.id !== jobId);
           saveJobs();
           loadJobs();
+          
+          // Remove from Supabase database
+          if (supabaseClient && isOnline) {
+            try {
+              const { error } = await supabaseClient
+                .from('daily_jobs')
+                .delete()
+                .eq('id', jobId);
+              
+              if (error) {
+                console.error('Failed to delete from cloud:', error);
+                // Show a subtle notification that cloud delete failed
+                updateSyncStatus('error', 'Deleted locally, cloud sync failed');
+                setTimeout(() => updateSyncStatus('success', 'All devices synced'), 3000);
+              } else {
+                updateSyncStatus('success', 'Deleted from all devices');
+                setTimeout(() => updateSyncStatus('success', 'All devices synced'), 2000);
+              }
+            } catch (error) {
+              console.error('Cloud delete error:', error);
+              updateSyncStatus('error', 'Deleted locally, cloud sync failed');
+              setTimeout(() => updateSyncStatus('success', 'All devices synced'), 3000);
+            }
+          }
         }
       }
 
