--- a/pages/shopping-list.html
+++ b/pages/shopping-list.html
@@ -655,11 +655,36 @@
         }
       }
 
-      function deleteItem(itemId) {
+      async function deleteItem(itemId) {
         if (confirm('Are you sure you want to delete this item?')) {
+          // Remove from local array
           items = items.filter(i => i.id !== itemId);
           saveItems();
           loadItems();
+          
+          // Remove from Supabase database
+          if (supabaseClient && isOnline) {
+            try {
+              const { error } = await supabaseClient
+                .from('shopping_items')
+                .delete()
+                .eq('id', itemId);
+              
+              if (error) {
+                console.error('Failed to delete from cloud:', error);
+                // Show a subtle notification that cloud delete failed
+                updateSyncStatus('error', 'Deleted locally, cloud sync failed');
+                setTimeout(() => updateSyncStatus('success', 'All devices synced'), 3000);
+              } else {
+                updateSyncStatus('success', 'Deleted from all devices');
+                setTimeout(() => updateSyncStatus('success', 'All devices synced'), 2000);
+              }
+            } catch (error) {
+              console.error('Cloud delete error:', error);
+              updateSyncStatus('error', 'Deleted locally, cloud sync failed');
+              setTimeout(() => updateSyncStatus('success', 'All devices synced'), 3000);
+            }
+          }
         }
       }
 
