Add cloud sync for engine start countdown across all devices
- Added Supabase configuration to main app for engine countdown sync
- Created engine_countdown table schema for cloud storage
- Updated engine widget to sync countdown data to Supabase
- Added real-time sync for engine countdown across all devices
- Engine start button now syncs to cloud and shows sync status
- Initial load checks cloud first, then falls back to localStorage
- All devices now show consistent engine countdown status
- Maintains backward compatibility with existing localStorage data

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
       </div>
     </footer>
 
+    <script src="https://unpkg.com/@supabase/supabase-js@2.45.4/dist/umd/supabase.js"></script>
     <script src="./script.js"></script>
   </body>
   </html>
