Update daily work list assigned to options with current crew roster
- Replaced generic crew positions with actual crew member names
- Updated options to: Toby, Mike, Robbie, Mel, Martial, Scott, Ewan, Dave, Deck team, Contractors
- Maintains all existing functionality and cloud sync
- Better reflects the actual MJII crew structure

--- a/pages/daily-work-list.html
+++ b/pages/daily-work-list.html
@@ -446,15 +446,16 @@
               <label class="form-label" for="assignedTo">Assigned To</label>
               <select id="assignedTo" class="form-select" required>
                 <option value="">Select person</option>
-                <option value="Captain">Captain</option>
-                <option value="Chief Engineer">Chief Engineer</option>
-                <option value="Second Engineer">Second Engineer</option>
-                <option value="First Officer">First Officer</option>
-                <option value="Bosun">Bosun</option>
-                <option value="Deckhand">Deckhand</option>
-                <option value="Steward/ess">Steward/ess</option>
-                <option value="Chef">Chef</option>
-                <option value="Other">Other</option>
+                <option value="Toby">Toby</option>
+                <option value="Mike">Mike</option>
+                <option value="Robbie">Robbie</option>
+                <option value="Mel">Mel</option>
+                <option value="Martial">Martial</option>
+                <option value="Scott">Scott</option>
+                <option value="Ewan">Ewan</option>
+                <option value="Dave">Dave</option>
+                <option value="Deck team">Deck team</option>
+                <option value="Contractors">Contractors</option>
               </select>
             </div>
             <div class="form-group">
